[gd_scene load_steps=26 format=1]

[ext_resource path="res://assets/knight/knight.gd" type="Script" id=1]
[ext_resource path="res://assets/knight/gfx/Run (1).png" type="Texture" id=2]
[ext_resource path="res://assets/knight/gfx/Run (2).png" type="Texture" id=3]
[ext_resource path="res://assets/knight/gfx/Run (3).png" type="Texture" id=4]
[ext_resource path="res://assets/knight/gfx/Run (4).png" type="Texture" id=5]
[ext_resource path="res://assets/knight/gfx/Run (5).png" type="Texture" id=6]
[ext_resource path="res://assets/knight/gfx/Run (6).png" type="Texture" id=7]
[ext_resource path="res://assets/knight/gfx/Run (7).png" type="Texture" id=8]
[ext_resource path="res://assets/knight/gfx/Run (8).png" type="Texture" id=9]
[ext_resource path="res://assets/knight/gfx/Run (9).png" type="Texture" id=10]
[ext_resource path="res://assets/knight/gfx/Run (10).png" type="Texture" id=11]
[ext_resource path="res://assets/knight/gfx/attack/Attack (1).png" type="Texture" id=12]
[ext_resource path="res://assets/knight/gfx/attack/Attack (2).png" type="Texture" id=13]
[ext_resource path="res://assets/knight/gfx/attack/Attack (3).png" type="Texture" id=14]
[ext_resource path="res://assets/knight/gfx/attack/Attack (4).png" type="Texture" id=15]
[ext_resource path="res://assets/knight/gfx/attack/Attack (5).png" type="Texture" id=16]
[ext_resource path="res://assets/knight/gfx/attack/Attack (6).png" type="Texture" id=17]
[ext_resource path="res://assets/knight/gfx/attack/Attack (7).png" type="Texture" id=18]
[ext_resource path="res://assets/knight/gfx/attack/Attack (8).png" type="Texture" id=19]
[ext_resource path="res://assets/knight/gfx/attack/Attack (9).png" type="Texture" id=20]
[ext_resource path="res://assets/knight/gfx/attack/Attack (10).png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 57 )

[sub_resource type="SpriteFrames" id=2]

animations = [ { "frames":[ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="Animation" id=3]

resource/name = "attack"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 10, 19 ] }

[sub_resource type="Animation" id=4]

length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0, 9 ] }

[node name="knight" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.35849, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="sprites" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "default"
frame = 19

[node name="AnimationPlayer" type="AnimationPlayer" parent="sprites"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/attack = SubResource( 3 )
anims/run = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.35849, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 500, 0 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = 0
limit/right = 10000000
limit/bottom = 720
limit/smoothed = true
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="check_down" type="RayCast2D" parent="."]

transform/pos = Vector2( -28.4602, 57.7109 )
enabled = true
exclude_parent = true
cast_to = Vector2( 32, 0 )
layer_mask = 1
type_mask = 15

[node name="check_right" type="RayCast2D" parent="."]

transform/pos = Vector2( 33.3392, -30.1128 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 64 )
layer_mask = 1
type_mask = 15

[node name="check_up" type="RayCast2D" parent="."]

transform/pos = Vector2( -17.3721, -57.8633 )
enabled = true
exclude_parent = true
cast_to = Vector2( 32, 0 )
layer_mask = 1
type_mask = 15

[node name="attack_cooloff" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[node name="damaged" type="Timer" parent="."]

process_mode = 1
wait_time = 2.5
one_shot = true
autostart = false

[connection signal="finished" from="sprites/AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]

[connection signal="timeout" from="attack_cooloff" to="." method="_on_attack_cooloff_timeout"]

[connection signal="timeout" from="damaged" to="." method="_on_damaged_timeout"]


